removed .vscode folder

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 *.user
 *.userosscache
 *.sln.docstates
-*.vscode
+
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
@@ -26,6 +26,7 @@ bld/
 [Bb]in/
 [Oo]bj/
 [Ll]og/
+.vscode
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
